--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.16.0)
-set(CMAKE_BUILD_TYPE_INIT Release)
+set(TacentVersion "0.8.0")
+set(TacentMinCMake "3.16.0")
 
-# Use a Properties common file (location based on top level project)
-# to add libraries with common build characteristics
+cmake_minimum_required(VERSION ${TacentMinCMake})
+set(CMAKE_BUILD_TYPE_INIT Release)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/CMakeModules")
 
 # Setup tacent build configurations before specifying the project.
@@ -12,10 +12,9 @@ find_package("SetupTacentConfigurations")
 #set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 # tacent is the top level project
-project(tacent VERSION 0.1.0 LANGUAGES CXX)
-message(STATUS "Tacent -- PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
-
+project(tacent VERSION ${TacentVersion} LANGUAGES CXX)
 
 # Main sub-projects, consisting of many other projects and sub-projects
 #add_subdirectory(Contrib)
 add_subdirectory(Modules/Foundation)
+#add_subdirectory(Modules/Math)
