--- a/Modules/Math/CMakeLists.txt
+++ b/Modules/Math/CMakeLists.txt
@@ -4,38 +4,33 @@ cmake_minimum_required(VERSION ${TacentMinCMake})
 find_package("SetupTacentConfigurations")
 
 # Give the project a name and specify explicitly the launguages used.
-project(Foundation VERSION ${TacentVersion} LANGUAGES CXX)
+project(Math VERSION ${TacentVersion} LANGUAGES CXX)
 
 # Here are the source files. No globbing. We include the headers here so that some generators can include
 # them properly, but they are not required. Currently SetupTacentProjectProperties requires a variable
 # called src. We should probably make the module just expose some common functions so the structure of this
 # CMakeLists looks a little more familiar.
-list(
-	APPEND src
-    Src/tAssert.cpp
-    Src/tBitArray.cpp
-    Src/tMemory.cpp
-    Src/tPlatform.cpp
-    Src/tPool.cpp
-    Src/tStandard.cpp
-    Src/tString.cpp
-    Src/tUnits.cpp
-    Inc/Foundation/tArray.h
-    Inc/Foundation/tAssert.h
-    Inc/Foundation/tBitArray.h
-    Inc/Foundation/tBitField.h
-    Inc/Foundation/tFixInt.h
-    Inc/Foundation/tList.h
-    Inc/Foundation/tMemory.h
-    Inc/Foundation/tPlatform.h
-    Inc/Foundation/tPool.h
-    Inc/Foundation/tPriorityQueue.h
-    Inc/Foundation/tRingBuffer.h
-    Inc/Foundation/tSort.h
-    Inc/Foundation/tStandard.h
-    Inc/Foundation/tString.h
-    Inc/Foundation/tUnits.h
-    Inc/Foundation/tVersion.h
+list (APPEND src
+    Src/tColour.cpp
+    Src/tGeometry.cpp
+    Src/tHash.cpp
+    Src/tLinearAlgebra.cpp
+    Src/tRandom.cpp
+    Src/tSpline.cpp
+    Inc/Math/tColour.h
+    Inc/Math/tConstants.h
+    Inc/Math/tFundamentals.h
+    Inc/Math/tGeometry.h
+    Inc/Math/tHash.h
+    Inc/Math/tLinearAlgebra.h
+    Inc/Math/tMatrix2.h
+    Inc/Math/tMatrix4.h
+    Inc/Math/tQuaternion.h
+    Inc/Math/tRandom.h
+    Inc/Math/tSpline.h
+    Inc/Math/tVector2.h
+    Inc/Math/tVector3.h
+    Inc/Math/tVector4.h
 )
 
 # Use a SetupTacentProjectProperties common file to call add_library with common build characteristics.
