--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,11 @@ project(tacent VERSION ${TacentVersion} LANGUAGES CXX)
 # Main sub-projects, consisting of many other projects and sub-projects
 #add_subdirectory(Contrib)
 add_subdirectory(Modules/Foundation)
-#add_subdirectory(Modules/Math)
+add_subdirectory(Modules/Math)
+add_subdirectory(Modules/System)
+#add_subdirectory(Modules/Image)
+message(STATUS "CMAKE_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}")
+if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
+	add_subdirectory(Modules/Pipeline)
+	add_subdirectory(Modules/Scene)
+endif()
