--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory(Modules/Foundation)
 add_subdirectory(Modules/Math)
 add_subdirectory(Modules/System)
 #add_subdirectory(Modules/Image)
-message(STATUS "CMAKE_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}")
+message(STATUS "-- Tacent CMAKE_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}")
 if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
 	add_subdirectory(Modules/Pipeline)
 	add_subdirectory(Modules/Scene)
