Ignore vscode settings file. Doesn't ignore the whole folder tho as the cmake build types aren't read by vscode cmake tools so we need a special file in there to specify the configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ build*/
 # Specifc filenames.
 compile_flags.txt
 compile_commands.json
+.vscode/settings.json
 
 # Specific filetypes to ignore everywhere.
 *.log
