--- a/Contrib/NvidiaTextureTools/src/bc7/CMakeLists.txt
+++ b/Contrib/NvidiaTextureTools/src/bc7/CMakeLists.txt
@@ -1,30 +1,31 @@
-PROJECT(bc7)
+# tacent
+project(bc7 VERSION 0.1.0)
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(
+    ..
+    ../../project/vs
+    ../../src
+    ../../extern/poshlib
+)
 
-SET(BC7_SRCS
-	avpcl.cpp
-	avpcl.h
-	avpcl_mode0.cpp
-	avpcl_mode1.cpp
-	avpcl_mode2.cpp
-	avpcl_mode3.cpp
-	avpcl_mode4.cpp
-	avpcl_mode5.cpp
-	avpcl_mode6.cpp
-	avpcl_mode7.cpp
-	bits.h
-	endpts.h
-	shapes_three.h
-	shapes_two.h
-	tile.h
-	avpcl_utils.cpp
-	avpcl_utils.h)
+list (APPEND src
+    avpcl_mode0.cpp
+    avpcl_mode1.cpp
+    avpcl_mode2.cpp
+    avpcl_mode3.cpp
+    avpcl_mode4.cpp
+    avpcl_mode5.cpp
+    avpcl_mode6.cpp
+    avpcl_mode7.cpp
+    avpcl_utils.cpp
+    avpcl_utils.h
+    avpcl.cpp
+    avpcl.h
+    bits.h
+    endpts.h
+    shapes_three.h
+    shapes_two.h
+    tile.h
+)
 
-ADD_LIBRARY(bc7 STATIC ${BC7_SRCS})
-
-IF(NOT WIN32)
-    IF(CMAKE_COMPILER_IS_GNUCXX)
-        SET_TARGET_PROPERTIES(bc7 PROPERTIES COMPILE_FLAGS -fPIC)
-    ENDIF(CMAKE_COMPILER_IS_GNUCXX)
-ENDIF(NOT WIN32)
+find_package(Properties REQUIRED)
