--- a/Modules/Math/CMakeLists.txt
+++ b/Modules/Math/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION ${TacentMinCMake})
+find_package("TacentProjectUtilities" REQUIRED)
+project(Math VERSION ${TACENT_VERSION} LANGUAGES CXX)
 
-# Setup configurations before specifying the project.
-find_package("SetupTacentConfigurations")
-
-# Give the project a name and specify explicitly the launguages used.
-project(Math VERSION ${TacentVersion} LANGUAGES CXX)
-
-# Here are the source files. No globbing. We include the headers here so that some generators can include
-# them properly, but they are not required. Currently SetupTacentProjectProperties requires a variable
-# called src. We should probably make the module just expose some common functions so the structure of this
-# CMakeLists looks a little more familiar.
-list (APPEND src
+add_library(
+	${PROJECT_NAME}
 	Src/tColour.cpp
 	Src/tGeometry.cpp
 	Src/tHash.cpp
@@ -33,12 +25,17 @@ list (APPEND src
 	Inc/Math/tVector4.h
 )
 
-# Use a SetupTacentProjectProperties common file to call add_library with common build characteristics.
-find_package("SetupTacentProjectProperties" REQUIRED)
+tacent_target_include_directories(${PROJECT_NAME})
+tacent_target_compile_definitions(${PROJECT_NAME})
+tacent_target_compile_options(${PROJECT_NAME})
+tacent_target_compile_features(${PROJECT_NAME})
 
 # Public means dependent interfaces are propagated. Private means they are not. Here we are saying the
 # Tacent Math module depends-on/requires the Foundation module.
-target_link_libraries(Math
+target_link_libraries(
+	${PROJECT_NAME}
 	PUBLIC
 		Foundation
 )
+
+tacent_install(${PROJECT_NAME})
