--- a/Modules/Pipeline/CMakeLists.txt
+++ b/Modules/Pipeline/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION ${TacentMinCMake})
+find_package("TacentProjectUtilities" REQUIRED)
+project(Pipeline VERSION ${TACENT_VERSION} LANGUAGES CXX)
 
-# Setup configurations before specifying the project.
-find_package("SetupTacentConfigurations")
-
-# Give the project a name and specify explicitly the launguages used.
-project(Pipeline VERSION ${TacentVersion} LANGUAGES CXX)
-
-# Here are the source files. No globbing. We include the headers here so that some generators can include
-# them properly, but they are not required. Currently SetupTacentProjectProperties requires a variable
-# called src. We should probably make the module just expose some common functions so the structure of this
-# CMakeLists looks a little more familiar.
-list (APPEND src
+add_library(
+	${PROJECT_NAME}
 	Src/tProcess.cpp
 	Src/tRule.cpp
 	Src/tSolution.cpp
@@ -19,11 +11,16 @@ list (APPEND src
 	Inc/Pipeline/tSolution.h
 )
 
-# Use a SetupTacentProjectProperties common file to call add_library with common build characteristics.
-find_package("SetupTacentProjectProperties" REQUIRED)
+tacent_target_include_directories(${PROJECT_NAME})
+tacent_target_compile_definitions(${PROJECT_NAME})
+tacent_target_compile_options(${PROJECT_NAME})
+tacent_target_compile_features(${PROJECT_NAME})
 
 # Public means dependent interfaces are propagated. Private means they are not.
-target_link_libraries(Pipeline
+target_link_libraries(
+	Pipeline
 	PUBLIC
 		Foundation Math System
 )
+
+tacent_install(${PROJECT_NAME})
