--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -1,15 +1,17 @@
-# Setup configurations before specifying the project.
-find_package("SetupTacentConfigurations")
+# This is the first module cmake file. It has more comments than subsequent cmakelists.
+
+# Include the utilities module.
+find_package("TacentProjectUtilities" REQUIRED)
 
 # Give the project a name and specify explicitly the launguages used.
-project(Foundation VERSION ${TacentVersion} LANGUAGES CXX)
+project(Foundation VERSION ${TACENT_VERSION} LANGUAGES CXX)
 
 # Here are the source files. No globbing. We include the headers here so that some generators can include
 # them properly, but they are not required. Currently SetupTacentProjectProperties requires a variable
 # called src. We should probably make the module just expose some common functions so the structure of this
 # CMakeLists looks a little more familiar.
-list(
-	APPEND src
+add_library(
+	${PROJECT_NAME}
 	Src/tAssert.cpp
 	Src/tBitArray.cpp
 	Src/tMemory.cpp
@@ -36,7 +38,11 @@ list(
 	Inc/Foundation/tVersion.h
 )
 
-# Use a SetupTacentProjectProperties common file to call add_library with common build characteristics.
-find_package("SetupTacentProjectProperties" REQUIRED)
+tacent_target_include_directories(${PROJECT_NAME})
+tacent_target_compile_definitions(${PROJECT_NAME})
+tacent_target_compile_options(${PROJECT_NAME})
+tacent_target_compile_features(${PROJECT_NAME})
 
-# If we had dependencies, we would use target_link_libraries
+# If we had dependencies, we would use target_link_libraries here.
+
+tacent_install(${PROJECT_NAME})
