CMakeFiles generate all libs and headers in a single dir when you install. Debug versions of the lib have a 'd' in them. Cleaned up CxImage a bit so there isn't a CxImage folder inside another one.

--- a/Contrib/CMakeLists.txt
+++ b/Contrib/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(contrib VERSION ${TacentVersion})
+project(contrib VERSION ${TACENT_VERSION})
 
-#add_subdirectory(CxImage)
+add_subdirectory(CxImage)
 #add_subdirectory(NvidiaTextureTools/src)
