--- a/Contrib/CxImage/CMakeLists.txt
+++ b/Contrib/CxImage/CMakeLists.txt
@@ -1,11 +1,11 @@
-project(cximagelibs ${TacentVersion})
+project(CxImage VERSION ${TACENT_VERSION})
 
-add_subdirectory(CxImage)
-add_subdirectory(dcr)
-add_subdirectory(jasper)
-add_subdirectory(jpeg)
-add_subdirectory(mng)
-add_subdirectory(png)
-add_subdirectory(psd)
-add_subdirectory(tiff)
-add_subdirectory(zlib)
+#add_subdirectory(ximage)
+#add_subdirectory(dcr)
+#add_subdirectory(jasper)
+#add_subdirectory(jpeg)
+#add_subdirectory(mng)
+#add_subdirectory(png)
+#add_subdirectory(psd)
+#add_subdirectory(tiff)
+#add_subdirectory(zlib)
