--- a/Modules/Pipeline/CMakeLists.txt
+++ b/Modules/Pipeline/CMakeLists.txt
@@ -15,6 +15,7 @@ tacent_target_include_directories(${PROJECT_NAME})
 tacent_target_compile_definitions(${PROJECT_NAME})
 tacent_target_compile_options(${PROJECT_NAME})
 tacent_target_compile_features(${PROJECT_NAME})
+tacent_set_target_properties(${PROJECT_NAME})
 
 # Public means dependent interfaces are propagated. Private means they are not.
 target_link_libraries(
